--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,38 @@
 *{
-  background-color: grey;
- }
+  /* background-color: #84ffff; */
+}
+
+h1{
+  text-align: center;
+  text-shadow: 2px 2px #eceff1;
+  color: #40c4ff;
+  font-size: 100px;
+
+
+}
+.wrapper{
+  font-size: 100px;
+  text-shadow: 2px 2px #eceff1;
+  background-color: #40c4ff;
+  color: white;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25% 25% 25% 25%;
+  text-align: center;
+}
+
+.item1 {
+  background-color: #00e5ff;
+  grid-column: 1 / 3;
+  height: 200px;
+
+}
+.item2{
+padding: 100px;}
+.item6{
+  grid-column: 1 / 3;
+  background-color: #00e5ff;
+  height: 200px;
+
+}
