--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ h1{
   text-shadow: 2px 2px #eceff1;
   color: #40c4ff;
   font-size: 100px;
+  padding: 50px;
 
 
 }
@@ -25,14 +26,15 @@ h1{
 .item1 {
   background-color: #00e5ff;
   grid-column: 1 / 3;
-  height: 200px;
+  padding: 50px;
 
 }
 .item2{
-padding: 100px;}
+  padding: 100px;
+ }
 .item6{
   grid-column: 1 / 3;
   background-color: #00e5ff;
-  height: 200px;
+  padding: 50px;
 
 }
