--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ h1{
 #connect{
   text-align: center;
   text-shadow: 2px 1px #eceff1;
+  padding: 50px;
 }
 #connect a :hover{
   opacity: 50%;
@@ -48,4 +49,8 @@ h1{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.auth-image{
+  max-height: 200px;
+  max-width: 200px;
 }
