--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,8 +34,12 @@ h1, h2{
   padding: 50px;
 }
 #connect{
-  text-align: center;
+  align: center;
   text-shadow: 2px 1px #eceff1;
+  padding: 26px;
+  background-color: #e3f2fd;
+  grid-column: 1 / 3;
+
 }
 .container > div > img {
   width: 100%;
@@ -79,6 +83,61 @@ h1, h2{
   grid-column: 2 / 3 ;
   background-color: #b2dfdb;
   padding-top: 40px;
+}
+.curtain{
+  width: 100%
+  height: 100vh;
+  overflow: hidden;
+}
+.curtain-wrapper{
+  width: 100%;
+  height: 100%;
+}
+.curtain-panel{
+  background: #f06292;
+  width: 50%;
+  height: 100vh;
+  float: left;
+  position: relative;
+  z-index: 2;
+  transition: all 1s ease-out;
+}
+.curtain-panel-left{
+
+}
+.curtain-panel-right{
+  font-family: 'Fascinate', cursive;
+  font-size: 80px;
+  text-shadow: 2px 1px #18ffff;
+  color: white;
+  text-align: center;
+}
+.curtain-main-content{
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+input[type=checkbox]{
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  opacity: 0;
+}
+input[type=checkbox]:checked ~ div.curtain-panel-left{
+  transform: translateX(0);
+}
+input[type=checkbox]:checked ~ div.curtain-panel-right{
+  transform: translateX(0);
+}
+.curtain-panel-left{
+  transform: translateX(-100%);
+
+}
+.curtain-panel-right{
+  transform: translateX(100%);
 }
 @-webkit-keyframes pulse {
   0% {
