--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h1, h2{
   background-color: #b2dfdb;
   padding-top: 40px;
 }
-.curtain{
+/* .curtain{
   width: 100%
   height: 100vh;
   overflow: hidden;
@@ -138,7 +138,7 @@ input[type=checkbox]:checked ~ div.curtain-panel-right{
 }
 .curtain-panel-right{
   transform: translateX(100%);
-}
+} */
 @-webkit-keyframes pulse {
   0% {
     -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
