--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ h1, h2{
 .item6{
   grid-column: 1 / 3;
   background-color: #00e5ff;
-  padding: 50px;
+  padding: 60px;
 }
 #connect{
   align: center;
@@ -72,73 +72,15 @@ h1, h2{
   color: #e1f5fe ;
   text-shadow: 2px 1px #18ffff ;
 }
-#sound{
-  gird-column: 1 / 2 ;
+#instructions{
+  grid-column: 1 / -1 ;
   text-align: center;
-  background-color: #e8f5e9;
+  background-color: #40c4ff;
   padding: 5px;
+  font-family: 'Play', sans-serif;
+  border-style: hidden;
 }
-#bunkShuffle{
-  text-align: center;
-  grid-column: 2 / 3 ;
-  background-color: #b2dfdb;
-  padding-top: 40px;
-}
-/* .curtain{
-  width: 100%
-  height: 100vh;
-  overflow: hidden;
-}
-.curtain-wrapper{
-  width: 100%;
-  height: 100%;
-}
-.curtain-panel{
-  background: #f06292;
-  width: 50%;
-  height: 100vh;
-  float: left;
-  position: relative;
-  z-index: 2;
-  transition: all 1s ease-out;
-}
-.curtain-panel-left{
 
-}
-.curtain-panel-right{
-  font-family: 'Fascinate', cursive;
-  font-size: 80px;
-  text-shadow: 2px 1px #18ffff;
-  color: white;
-  text-align: center;
-}
-.curtain-main-content{
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-input[type=checkbox]{
-  position: absolute;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-  opacity: 0;
-}
-input[type=checkbox]:checked ~ div.curtain-panel-left{
-  transform: translateX(0);
-}
-input[type=checkbox]:checked ~ div.curtain-panel-right{
-  transform: translateX(0);
-}
-.curtain-panel-left{
-  transform: translateX(-100%);
-
-}
-.curtain-panel-right{
-  transform: translateX(100%);
-} */
 @-webkit-keyframes pulse {
   0% {
     -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
